# Adastra_Task

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py  password.py  token.py  utils.py
app/auth/: api.py
app/cars/: api.py  filters.py  repository.py
app/cars/models/: __init__.py  car.py
app/cars/schemas/: request.py  response.py
app/users/: api.py
app/users/models/: user.py
app/users/schemas/: response.py
proxy/: nginx.conf
tests/: conftest.py  test_auth_api.py  test_cars_api.py  test_user_profile_api.py
