[tool.poetry]
name = "adastra-task"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
psycopg2-binary = "^2.9.10"
fastapi-pagination = "^0.12.31"
fastapi-filter = "^2.0.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^2.9.2"}
httpx = "^0.27.2"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
black = "^24.10.0"
ruff = "^0.7.2"
refurb = "^2.0.0"
mypy = "^1.13.0"
codespell = "^2.3.0"
types-passlib = "^1.7.7.20240819"
types-python-jose = "^3.3.4.20240106"
freezegun = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
